# Advanced-RAG-demo

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  main.py  pyproject.toml  requirements.txt
backend/: __init__.py  config.py  feedback_system.py  main.py  models.py  rag_pipeline.py  requirements.txt
data/: feedback_export.csv  feedback_memory.json
notebooks/: advanced-rag.ipynb  chatbot-feedback.ipynb  chunking-indexing-optimization.ipynb  feedback-pipeline.ipynb
notebooks/opt_results/: best_config.json  optimization_results.csv
streamlit/: __init__.py  api_client.py  app.py  app_config.py
