[project]
name = "advanced-rag-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.4.1",
    "faiss-cpu>=1.13.0",
    "fastapi>=0.121.2",
    "gradio>=5.49.1",
    "ipykernel>=7.1.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.0",
    "matplotlib>=3.10.7",
    "notebook>=7.5.0",
    "numpy<2.0",
    "openai>=1.0.0",
    "pandas>=2.3.3",
    "pypdf>=6.3.0",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
    "torch==2.2.2",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
]
